# the_rust_game

./: Cargo.toml
.VSCodeCounter/2026-01-16_19-39-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/: provinces.json  shader.wgsl  textures.json
assets/history/: history.json
assets/jsons/: countries.json  provinces.json
assets/shaders/: province.wgsl  shader.wgsl  test.wgsl  test2.wgsl
client/: Cargo.toml
client/assets/: shader.wgsl
client/src/: lib.rs  main.rs  startup_plugin.rs
server/: Cargo.toml
server/assets/: countries.json
server/src/: lib.rs  main.rs  menu.rs
server/src/data/: resources.rs
server/src/game/: ai.rs  game.rs  graphics.rs  history.rs  mod.rs  systems.rs
server/src/game/command_impl/: atack.rs  basic.rs  command.rs  helpers.rs  mod.rs
server/src/game/net/: apply.rs  mod.rs  plugin.rs  threads.rs  types.rs
server/src/history/: history.rs  history_graphics.rs  mod.rs  plugin.rs
server/src/load_game/: finish.rs  graphics.rs  load_game.rs  mod.rs
server/src/load_game/load_resource/: id_map.rs  mod.rs  vec_province.rs
server/src/startup_game/: finish.rs  graphics.rs  load_game.rs  mod.rs
server/src/startup_game/load_resource/: id_map.rs  resources.rs  vec_country.rs  vec_province.rs
server/src/startup_game/new_game/: helper_country.rs  helper_map.rs  helper_province.rs  mod.rs  plugin.rs
shared/: Cargo.toml
shared/src/: lib.rs  resources.rs
src/: lib.rs  main.rs  map_data.rs  map_display.rs  menu.rs  resources.rs
src/data/: gpu.rs  loaders.rs  mod.rs  (+2 more)
(+85 files in other folders)
