[package]
name = "the_rust_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_ecs = "0.17.3"
image = "0.25.9"
pathfinding = "4.14.0"
serde = "1.0.228"
serde_json = "1.0.148"
thiserror = "2.0.17"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
