[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", package = "shared" }
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.149"
image = "0.25.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
crossbeam-channel = "0.5"
